--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,7 @@ button[data-operator = "="]{
     width: 150px;
     background-color: rgb(252, 126, 53);
 }
+
+button.active {
+    box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.6);
+}
